--- a/exercicio10/index.html
+++ b/exercicio10/index.html
@@ -1,1 +1,13 @@
 <!-- Gabriel Reis de Brito -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../exercicio10/main.js"></script>
+    <title>Exercício 10</title>
+ </head>
+ <body>
+    
+ </body>
+ </html>
