--- a/exercicio13/index.html
+++ b/exercicio13/index.html
@@ -1,1 +1,13 @@
 <!-- Gabriel Reis de Brito -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../exercicio13/main.js"></script>
+    <title>Exercício 13</title>
+ </head>
+ <body>
+    <button onclick="saibaMais()">Saiba mais</button>
+ </body>
+ </html>
