--- a/exercicio17/index.html
+++ b/exercicio17/index.html
@@ -1,1 +1,14 @@
 <!-- Gabriel Reis de Brito -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../exercicio17/main.js"></script>
+    <title>Execício 17</title>
+ </head>
+ <body>
+    <input id="box" type="text" onchange="funcao()">
+    <p id="textop">Preço total: R$ 0</p>
+ </body>
+ </html>
