--- a/exercicio14/index.html
+++ b/exercicio14/index.html
@@ -1,1 +1,17 @@
 <!-- Gabriel Reis de Brito -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../exercicio14/main.js"></script>
+    <title>Exercício 14</title>
+ </head>
+ <body>
+    <select id="dropdown" onchange="change()">
+        <option>Sugestões</option>
+        <option>Reclamações</option>
+        <option>Dúvidas</option>
+    </select>
+ </body>
+ </html>
