--- a/exercicio16/index.html
+++ b/exercicio16/index.html
@@ -1,1 +1,13 @@
 <!-- Gabriel Reis de Brito -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../exercicio16/main.js"></script>
+    <title>Exercício 16</title>
+ </head>
+ <body>
+    <p id="cor" onmouseover="mudarCor()">Passe o mouse aqui!</p>
+ </body>
+ </html>
