--- a/exercicio19/index.html
+++ b/exercicio19/index.html
@@ -1,1 +1,13 @@
 <!-- Gabriel Reis de Brito -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <script src="../exercicio19/main.js"></script>
+   <title>Exercício 19</title>
+</head>
+<body>
+   <input id="input" type="text" onfocus="estilo()">
+</body>
+</html>
